# FastAPI

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_06_06_2150-60ac578006fa_create_model_user.py  2026_06_10_0934-dfd5c1f32bfb_change_model_user.py  2026_06_10_1030-8c4273bf49b6_add_unique_email_field.py
src/: main.py
src/account/: constans.py
src/account/models/: user.py
src/account/repositories/: user.py
src/account/router/: __init__.py  role.py  user.py
src/account/schemas/: user.py
src/account/services/: user.py
src/core/: config.py  database.py  orm.py  router.py
