[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Alix <asmpc@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
sqlalchemy = "^2.0.50"
python-dotenv = "^1.2.2"
pydantic-settings = "^2.14.1"
psycopg2-binary = "^2.9.12"
alembic = "^1.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)"
]
dev = [
    "ruff (>=0.15.15,<0.16.0)"
]
